Fix overflow when viewing as

--- a/src/pages/styles/quests.scss
+++ b/src/pages/styles/quests.scss
@@ -2,4 +2,7 @@
 .layoutflow {
     width: calc(100vw - 65px);
     height: calc(100vh - 48px);
-  }
+    &.viewing-as {
+      height: calc(100vh - 88px);
+    }
+}
